Found updateCapacity bug on cellar, update todo, update align outofstock

--- a/style.css
+++ b/style.css
@@ -349,6 +349,6 @@
 }
 
 .outOfStock {
-	/* TODO: Something to align image;*/
+	padding-left: 2px;
 }
 
